# ioi-agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  agent.py  custom_model.py  logger.py  main.py  pyproject.toml  requirements.txt  test_agent.py  tool.py  utils.py
exams/2024/hieroglyphs/: problem.json
exams/2024/hieroglyphs/subtasks/: 00-samples.json  01-perm.json  02-cnt3.json  03-bin.json  04-hasucs.json  05-n2.json  06-full.json
exams/2024/message/: problem.json
exams/2024/message/subtasks/: 02-full.json  (+1 more)
exams/2024/mosaic/: problem.json
exams/2024/nile/: problem.json
exams/2024/sphinx/: problem.json
exams/2024/tree/: problem.json
exams/2025/festival/: problem.json
exams/2025/migrations/: problem.json
exams/2025/obstacles/: problem.json
exams/2025/souvenirs/: problem.json
exams/2025/triples/: problem.json
exams/2025/worldmap/: problem.json
submission_scripts/2024/hieroglyphs/: problem.json
submission_scripts/2024/message/: problem.json
submission_scripts/2024/mosaic/: problem.json
submission_scripts/2024/nile/: problem.json
submission_scripts/2024/sphinx/: problem.json  run_tests.sh
submission_scripts/2024/tree/: problem.json
submission_scripts/2025/festival/: problem.json
submission_scripts/2025/migrations/: problem.json  run_tests.sh
submission_scripts/2025/obstacles/: problem.json  run_tests.sh
submission_scripts/2025/souvenirs/: problem.json
submission_scripts/2025/triples/: problem.json
submission_scripts/2025/worldmap/: problem.json
submission_scripts/run_tests/: batch.sh  message.sh  sphinx.sh
(+2001 files in other folders)
